external-crates/move/crates/move-compiler/tests/move_2024/verification/cross_module_invalid.exp
error[E03004]: unbound type
   ┌─ tests/move_2024/verification/cross_module_invalid.move:24:23
   │
24 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/verification/cross_module_invalid.move:25:9
   │
25 │         A::build_foo()
   │         ^^^^^^^^^^^^ Unexpected module identifier. A module identifier is not a valid expression

